[tool.poetry]
name = "keystorebrute"
version = "0.0.1"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.12"
pyjks = "^20.0.0"
termcolor = "^2.5.0"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"

[tool.black]
line-length = 120
target-version = ['py312']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
